--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Заголовок1</h1>
-    <h2>Заголово2</h2>
-    <P>Новый параграф</P>
-    <p>текст</p>
+    <p>bla bla bla bla</p>
 </body>
 </html>
